[package]
name = "ldk-watchtower-client"
version = "0.1.0"
edition = "2021"
description = "LND watchtower client for LDK — cross-implementation watchtower bridge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FreeOnlineUser/ldk-watchtower-client"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Noise protocol for tower handshake (same as Lightning P2P)
# snow removed -- replaced with custom brontide.rs (BOLT 8 compliant)

# Encryption for justice blobs
chacha20poly1305 = "0.10"

# Crypto primitives
bitcoin = { version = "0.32", features = ["secp-recovery"] }
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
sha2 = "0.10"
hkdf = "0.12"

# Async networking
tokio = { version = "1", features = ["net", "io-util", "time", "sync", "rt", "macros"] }

# Tor connectivity (embedded Arti client for .onion connections)
arti-client = { version = "0.39", features = ["tokio", "rustls", "onion-service-client", "static-sqlite"], default-features = false }
tor-rtcompat = { version = "0.39", features = ["tokio", "rustls"] }

# Serialization
byteorder = "1.5"

# Logging
log = "0.4"

# Random nonces
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
hex = "0.4.3"
